loco-gen/tests/templates/snapshots/generate[views_[create]]@Htmx_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(views_path.join(format!(\"{view}.html\"))).expect(\"view file missing\")"
---
{% extends "base.html" %}

{% block title %}
Create movie
{% endblock title %}

{% block content %}
<div class="mb-10">
    <form hx-post="/movies" hx-ext="submitjson">
        <h1>Create new movie</h1>
        <div class="mb-5">
        <div>
        <label>title</label>
        <br />
        <input id="title" name="title" type="text" value=""/>
        </div>
    </div>
    <div>
        <button class=" text-xs py-3 px-6 rounded-lg bg-gray-900 text-white" type="submit">Submit</button>
    </div>
    </form>
</div>
{% endblock content %}

{% block js %}
<script>
    htmx.defineExtension('submitjson', {
        onEvent: function (name, evt) {
            if (name === "htmx:configRequest") {
                evt.detail.headers['Content-Type'] = "application/json";
            }
        },
        encodeParameters: function (xhr, parameters, elt) {
            const json = {};
            for (const [key, value] of Object.entries(parameters)) {
                const inputType = elt.querySelector(`[name=${key}]`).type;
                if (inputType === 'number') {
                    json[key] = parseFloat(value);
                } else if (inputType === 'checkbox') {
                    json[key] = elt.querySelector(`[name=${key}]`).checked;
                } else {
                    json[key] = value;
                }
            }

            elt.querySelectorAll('[name]').forEach(input => {
                if (input.name.endsWith('[]')) {
                    const group = input.name.split('[')[0]; // Extract group name

                    if (!json[group]) {
                        json[group] = [];
                    }
                    json[group].push(input.value);
                }
            });

            return JSON.stringify(json);
        }
    });

    document.addEventListener('DOMContentLoaded', function () {
        document.querySelectorAll('.add-more').forEach(button => {
            button.addEventListener('click', function () {
                const group = this.getAttribute('data-group');
                const container = document.getElementById(`${group}-inputs`);
                const newInput = document.createElement('input');
                newInput.type = 'text';
                newInput.name = `${group}[]`;
                newInput.placeholder = `Enter another ${group} value`;
                container.appendChild(newInput);
            });
        });
    });
</script>
{% endblock js %}
