loco-gen/tests/templates/snapshots/generate[views_[edit]]@Htmx_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(views_path.join(format!(\"{view}.html\"))).expect(\"view file missing\")"
---
{% extends "base.html" %}

{% block title %}
Edit movie: {{ item.id }}
{% endblock title %}

{% block content %}
<h1>Edit movie: {{ item.id }}</h1>
<div class="mb-10">
    <form hx-put="/movies/{{ item.id }}" hx-ext="submitjson" hx-target="#success-message">
    <div class="mb-5">
    <div>
        <label>title</label>
        <br />
        <input id="title" name="title" type="text" value="{{item.title}}"></input>
        </div>
    </div>
    <div>
        <div class="mt-5">
            <button class=" text-xs py-3 px-6 rounded-lg bg-gray-900 text-white" type="submit">Submit</button>
            <button class="text-xs py-3 px-6 rounded-lg bg-red-600 text-white"
                        onclick="confirmDelete(event)">Delete</button>
        </div>
    </div>
</form>
<div id="success-message" class="mt-4"></div>
<br />
<a href="/movies">Back to movie</a>
</div>
{% endblock content %}

{% block js %}
<script>
    htmx.defineExtension('submitjson', {
        onEvent: function (name, evt) {
            if (name === "htmx:configRequest") {
                evt.detail.headers['Content-Type'] = "application/json"
            }
        },
        encodeParameters: function (xhr, parameters, elt) {
            const json = {};
            // Handle individual field inputs
            for (const [key, value] of Object.entries(parameters)) {
                const inputType = elt.querySelector(`[name="${key}"]`).type;
                if (inputType === 'number') {
                    json[key] = parseFloat(value);
                } else if (inputType === 'checkbox') {
                    json[key] = elt.querySelector(`[name="${key}"]`).checked;
                } else {
                    json[key] = value;
                }
            }

            // Handle array inputs dynamically based on the name
            elt.querySelectorAll('[name]').forEach(input => {
                if (input.name.endsWith('[]')) {
                    const group = input.name.split('[')[0]; // Extract group name

                    if (!json[group]) {
                        json[group] = [];
                    }
                    json[group].push(input.value);
                }
            });

            return JSON.stringify(json);
        }
    })
    function confirmDelete(event) {
        event.preventDefault();
        if (confirm("Are you sure you want to delete this item?")) {
            var xhr = new XMLHttpRequest();
            xhr.open("DELETE", "/movies/{{ item.id }}", true);
            xhr.onreadystatechange = function () {
                if (xhr.readyState == 4 && xhr.status == 200) {
                    window.location.href = "/movies";
                }
            };
            xhr.send();
        }
    }

    document.addEventListener('DOMContentLoaded', function () {
        document.querySelectorAll('.add-more').forEach(button => {
            button.addEventListener('click', function () {
                const group = this.getAttribute('data-group');
                const container = document.getElementById(`${group}-inputs`);
                const newInput = document.createElement('input');
                newInput.type = 'text';
                newInput.name = `${group}[]`;
                newInput.placeholder = `Enter another ${group} value`;
                container.appendChild(newInput);
            });
        });
    });
</script>
{% endblock js %}
