loco-gen/tests/templates/snapshots/generate[views_[show]]@Html_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(views_path.join(format!(\"{view}.html\"))).expect(\"view file missing\")"
---
{% extends "base.html" %}

{% block title %}
View movie: {{ item.id }}
{% endblock title %}

{% block content %}
<h1>View movie: {{ item.id }}</h1>
<div class="mb-10">
<div>
        <label>title: {{item.title}}</label>
    </div>
<br />
<a href="/movies">Back to movies</a>
</div>
{% endblock content %}
