loco-gen/tests/templates/snapshots/generate_result@create_join_table_migration.snap
---
source: loco-gen/tests/templates/migration.rs
expression: collect_messages(&gen_result)
---
* Migration for `CreateJoinTableUsersAndGroups` added! You can now apply it with `$ cargo loco db migrate`.
