loco-gen/tests/templates/snapshots/generate_result@rename_column_migration.snap
---
source: loco-gen/tests/templates/migration.rs
expression: collect_messages(&gen_result)
snapshot_kind: text
---
* Migration `rename_title_to_name_on_movies` added! You can now apply it with `$ cargo loco db migrate && cargo loco db entities`.
